Add checks to l3doc's syntax environment (fixes #381)
Now using two "syntax" environments in the same function causes
an error (previously the first "syntax" environment was discarded).
In this commit I also use "syntax" environment in a few places in
the implementation part.  Not sure I like it (semantically).

--- a/l3kernel/l3fp-expo.dtx
+++ b/l3kernel/l3fp-expo.dtx
@@ -191,15 +191,13 @@
 % \end{macro}
 %
 % \begin{macro}[aux, EXP]{\@@_ln_significand:NNNNnnnN}
-%   \begin{quote}
-%     \cs{@@_ln_significand:NNNNnnnN} \meta{X_1} \Arg{X_2} \Arg{X_3}
-%     \Arg{X_4} \meta{continuation}
-%   \end{quote}
+%   \begin{syntax}
+%     \cs{@@_ln_significand:NNNNnnnN} \meta{X_1} \Arg{X_2} \Arg{X_3} \Arg{X_4} \meta{continuation}
+%   \end{syntax}
 %   This function expands to
-%   \begin{quote}
-%     \meta{continuation} \Arg{Y_1} \Arg{Y_2} \Arg{Y_3} \Arg{Y_4}
-%     \Arg{Y_5} \Arg{Y_6} |;|
-%   \end{quote}
+%   \begin{syntax}
+%     \meta{continuation} \Arg{Y_1} \Arg{Y_2} \Arg{Y_3} \Arg{Y_4} \Arg{Y_5} \Arg{Y_6} |;|
+%   \end{syntax}
 %   where $Y = - \ln(X)$ as an extended fixed point.
 %    \begin{macrocode}
 \cs_new:Npn \@@_ln_significand:NNNNnnnN #1#2#3#4
@@ -316,10 +314,9 @@
 %   a faithful rounding).
 %   ^^A todo: doc
 %
-%   \begin{quote}
-%     \cs{@@_ln_x_iv:wnnnnnnnn}
-%     \meta{1 or 2} \meta{8d} |;| \Arg{4d} \Arg{4d} \meta{fixed-tl}
-%   \end{quote}
+%   \begin{syntax}
+%     \cs{@@_ln_x_iv:wnnnnnnnn} \meta{1 or 2} \meta{8d} |;| \Arg{4d} \Arg{4d} \meta{fixed-tl}
+%   \end{syntax}
 %   The number is $x$. Compute $y$ by adding 1 to the five first digits.
 %    \begin{macrocode}
 \cs_new:Npn \@@_ln_x_iv:wnnnnnnnn #1; #2#3#4#5 #6#7#8#9
@@ -357,7 +354,7 @@
 %   We now have essentially
 %   ^^A todo: determine error on $Q_{6}$ (probably $6.7$),
 %   ^^A todo: conclude the final result is off by $<10^{-23}$
-%   \begin{quote}
+%   \begin{syntax}
 %     \cs{@@_ln_div_after:Nw} \meta{fixed tl}
 %     \cs{@@_div_significand_pack:NNN} $10^6 + Q_{1}$
 %     \cs{@@_div_significand_pack:NNN} $10^6 + Q_{2}$
@@ -366,16 +363,17 @@
 %     \cs{@@_div_significand_pack:NNN} $10^6 + Q_{5}$
 %     \cs{@@_div_significand_pack:NNN} $10^6 + Q_{6}$ |;|
 %     \meta{exponent} |;| \meta{continuation}
-%   \end{quote}
+%   \end{syntax}
 %   where \meta{fixed tl} holds the logarithm of a number
 %   in $[1,10]$, and \meta{exponent} is
 %   the exponent. Also, the expansion is done backwards. Then
 %   \cs{@@_div_significand_pack:NNN} puts things in the
 %   correct order to add the $Q_{i}$ together and put semicolons
 %   between each piece. Once those have been expanded, we get
-%   \begin{quote}
-%     \cs{@@_ln_div_after:Nw} \meta{fixed-tl} \meta{1d} |;| \meta{4d} |;| \meta{4d} |;| \meta{4d} |;| \meta{4d} |;| \meta{4d} |;| \meta{4d} |;| \meta{exponent} |;|
-%   \end{quote}
+%   \begin{syntax}
+%     \cs{@@_ln_div_after:Nw} \meta{fixed-tl} \meta{1d} |;| \meta{4d} |;| \meta{4d} |;|
+%     ~~\meta{4d} |;| \meta{4d} |;| \meta{4d} |;| \meta{4d} |;| \meta{exponent} |;|
+%   \end{syntax}
 %   ^^A todo: redoc.
 %   Just as with division, we know that the first two digits
 %   are |1| and |0| because of bounds on the final result of
@@ -407,9 +405,11 @@
   }
 %    \end{macrocode}
 %
-%   \begin{quote}
-%     \cs{@@_ln_t_large:NNw} \meta{sign}\meta{fixed tl}  \meta{t_1}|;| \meta{t_2} |;| \meta{t_3}|;| \meta{t_4}|;| \meta{t_5} |;| \meta{t_6}|;| \meta{exponent} |;| \meta{continuation}
-%   \end{quote}
+%   \begin{syntax}
+%     \cs{@@_ln_t_large:NNw} \meta{sign} \meta{fixed tl}
+%     ~~\meta{t_1}|;| \meta{t_2} |;| \meta{t_3}|;| \meta{t_4}|;| \meta{t_5} |;| \meta{t_6}|;|
+%     ~~\meta{exponent} |;| \meta{continuation}
+%   \end{syntax}
 %   Compute the square $|t|^2$, and keep $|t|$ at the end with its
 %   sign. We know that $|t|<0.1765$, so every piece has at most $4$
 %   digits. However, since we were not careful in \cs{@@_ln_t_small:w},
@@ -455,13 +455,13 @@
 %
 % \begin{macro}{\@@_ln_Taylor:wwNw}
 %   Denoting $T=t^2$, we get
-%   \begin{quote}
+%   \begin{syntax}
 %     \cs{@@_ln_Taylor:wwNw}
-%     \Arg{T_1} \Arg{T_2} \Arg{T_3} \Arg{T_4} \Arg{T_5} \Arg{T_6} |;| |;|
-%     \Arg{(2t)_1} \Arg{(2t)_2} \Arg{(2t)_3} \Arg{(2t)_4} \Arg{(2t)_5} \Arg{(2t)_6} |;|
-%     |{| \cs{@@_ln_c:NwNw} \meta{sign} |}|
-%     \meta{fixed tl} \meta{exponent} |;| \meta{continuation}
-%   \end{quote}
+%     ~~\Arg{T_1} \Arg{T_2} \Arg{T_3} \Arg{T_4} \Arg{T_5} \Arg{T_6} |;| |;|
+%     ~~\Arg{(2t)_1} \Arg{(2t)_2} \Arg{(2t)_3} \Arg{(2t)_4} \Arg{(2t)_5} \Arg{(2t)_6} |;|
+%     ~~|{| \cs{@@_ln_c:NwNw} \meta{sign} |}|
+%     ~~\meta{fixed tl} \meta{exponent} |;| \meta{continuation}
+%   \end{syntax}
 %   And we want to compute
 %   \[
 %   \ln\left(\frac{1+t}{1-t}\right)
@@ -508,11 +508,11 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_ln_c:NwNw}
-%   \begin{quote}
+%   \begin{syntax}
 %     \cs{@@_ln_c:NwNw} \meta{sign}
-%     \Arg{r_1} \Arg{r_2} \Arg{r_3} \Arg{r_4} \Arg{r_5} \Arg{r_6} |;|
-%     \meta{fixed tl} \meta{exponent} |;| \meta{continuation}
-%   \end{quote}
+%     ~~\Arg{r_1} \Arg{r_2} \Arg{r_3} \Arg{r_4} \Arg{r_5} \Arg{r_6} |;|
+%     ~~\meta{fixed tl} \meta{exponent} |;| \meta{continuation}
+%   \end{syntax}
 %   We are now reduced to finding $\ln(c)$ and $\meta{exponent}\ln(10)$
 %   in a table, and adding it to the mixture. The first step is to
 %   get $\ln(c) - \ln(x) = - \ln(a)$, then we get $|b|\ln(10)$ and add
@@ -535,11 +535,11 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_ln_exponent:wn}
-%   \begin{quote}\raggedright
+%   \begin{syntax}
 %     \cs{@@_ln_exponent:wn}
-%     \Arg{s_1} \Arg{s_2} \Arg{s_3} \Arg{s_4} \Arg{s_5} \Arg{s_6} |;|
-%     \Arg{exponent}
-%   \end{quote}
+%     ~~\Arg{s_1} \Arg{s_2} \Arg{s_3} \Arg{s_4} \Arg{s_5} \Arg{s_6} |;|
+%     ~~\Arg{exponent}
+%   \end{syntax}
 %   Compute \meta{exponent} times $\ln(10)$. Apart from the cases where
 %   \meta{exponent} is $0$ or $1$, the result is necessarily at
 %   least $\ln(10) \simeq 2.3$ in magnitude. We can thus drop the least
