\current@color may not be a pure string
The xcolor package sets it to be instructions to generate a colour, for
example.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -519,7 +519,7 @@
     \@ifpackageloaded { color }
       {
         \cs_new_protected:Npn \@@_color_pickup:
-          { \tl_set_eq:NN \l__color_current_tl \current@color }
+          { \tl_set:Nx \l__color_current_tl { \current@color } }
       }
       { \cs_new_protected:Npn \@@_color_pickup: { } }
   }
@@ -567,11 +567,12 @@
       {
         \cs_new_protected:Npn \@@_color_pickup:
           {
+            \tl_set:Nx \l__color_current_tl { \current@color }
             \tl_set:Nx \l__color_current_tl
               {
-                \exp_after:wN \exp_after:wN\exp_after:wN
+                \exp_after:wN \exp_after:wN \exp_after:wN
                   \@@_color_pickup_aux:w \exp_after:wN
-                  \current@color \c_space_tl 0 ~ 0 ~ 0 \q_stop
+                  \l__color_current_tl \c_space_tl 0 ~ 0 ~ 0 \q_stop
               }
           }
         \cs_new:Npn \@@_color_pickup_aux:w #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 \q_stop
