Mark \bool_if:NTF and derived functions as updated [ci skip]
In commit 7375 where I made \bool_if:nTF eager (=greedy) I also
changed \bool_if:NTF, which now complains about undefined booleans.
I forgot to mark a this and a few derived functions as updated then.

--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -280,7 +280,7 @@
 %   the logical truth of this evaluation.
 % \end{function}
 %
-% \begin{function}[EXP,pTF]{\bool_if:N, \bool_if:c}
+% \begin{function}[EXP,pTF, updated = 2017-07-15]{\bool_if:N, \bool_if:c}
 %   \begin{syntax}
 %     \cs{bool_if_p:N} \meta{boolean}
 %     \cs{bool_if:NTF} \meta{boolean} \Arg{true code} \Arg{false code}
@@ -497,7 +497,7 @@
 %
 % Loops using either boolean expressions or stored boolean values.
 %
-% \begin{function}[rEXP]{\bool_do_until:Nn, \bool_do_until:cn}
+% \begin{function}[rEXP, updated = 2017-07-15]{\bool_do_until:Nn, \bool_do_until:cn}
 %   \begin{syntax}
 %     \cs{bool_do_until:Nn} \meta{boolean} \Arg{code}
 %   \end{syntax}
@@ -508,7 +508,7 @@
 %   \texttt{true}.
 % \end{function}
 %
-% \begin{function}[rEXP]{\bool_do_while:Nn, \bool_do_while:cn}
+% \begin{function}[rEXP, updated = 2017-07-15]{\bool_do_while:Nn, \bool_do_while:cn}
 %   \begin{syntax}
 %     \cs{bool_do_while:Nn} \meta{boolean} \Arg{code}
 %   \end{syntax}
@@ -519,7 +519,7 @@
 %   \texttt{false}.
 % \end{function}
 %
-% \begin{function}[rEXP]{\bool_until_do:Nn, \bool_until_do:cn}
+% \begin{function}[rEXP, updated = 2017-07-15]{\bool_until_do:Nn, \bool_until_do:cn}
 %   \begin{syntax}
 %     \cs{bool_until_do:Nn} \meta{boolean} \Arg{code}
 %   \end{syntax}
@@ -530,7 +530,7 @@
 %   until the \meta{boolean} is \texttt{true}.
 % \end{function}
 %
-% \begin{function}[rEXP]{\bool_while_do:Nn, \bool_while_do:cn}
+% \begin{function}[rEXP, updated = 2017-07-15]{\bool_while_do:Nn, \bool_while_do:cn}
 %   \begin{syntax}
 %     \cs{bool_while_do:Nn} \meta{boolean} \Arg{code}
 %   \end{syntax}
