l3str: fix a typo
Someone use `’` (U+2019) here. It should be `'` (U+0027).

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -71,7 +71,7 @@
 %
 % As a string is a subset of the more general token list, it is sometimes unclear
 % when one should be used over the other.
-% Use a string variable for data that isn’t primarily intended for typesetting
+% Use a string variable for data that isn't primarily intended for typesetting
 % and for which a level of protection from unwanted expansion is suitable.
 % This data type simplifies comparison of variables since there are no concerns
 % about expansion of their contents.
