Provide check-expressions debugging tool
With \debug_on:n { check-expressions }, all expressions are wrapped
with some code that checks for bad input such as "1 ~ 2" which with
eTeX's \numexpr would terminate the expression early without warning.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -84,7 +84,7 @@
 %
 % \section{Additions to \pkg{l3basics}}
 %
-% \begin{function}[added = 2017-07-16]{\debug_on:n, \debug_off:n}
+% \begin{function}[added = 2017-07-16, updated = 2017-08-02]{\debug_on:n, \debug_off:n}
 %   \begin{syntax}
 %     \cs{debug_on:n} |{| \meta{comma-separated list} |}|
 %     \cs{debug_off:n} |{| \meta{comma-separated list} |}|
@@ -95,6 +95,8 @@
 %   \begin{itemize}
 %     \item \texttt{check-declarations} that checks all \pkg{expl3}
 %       variables used were previously declared;
+%     \item \texttt{check-expressions} that checks integer, dimension,
+%       skip, and muskip expressions are not terminated prematurely;
 %     \item \texttt{deprecation} that makes soon-to-be-deprecated commands produce errors;
 %     \item \texttt{log-functions} that logs function definitions;
 %   \end{itemize}
