--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1959,6 +1959,7 @@
         '\iow_char:N\\debug_off:n'~only~accept~the~arguments~
         'check-declarations',~'deprecation',~'log-functions',~not~'#1'.
       }
+    \@@_kernel_new:nnn { kernel } { expr } { '#2'~in~#1 }
     \@@_kernel_new:nnnn { kernel } { non-declared-variable }
       { The~variable~#1~has~not~been~declared~\msg_line_context:. }
       {
