For negative bases, only allow integer powers (see #385)
Not marking the issue as fixed since I still need to implement some
root(x,n) function.

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -703,8 +703,9 @@
 %   \[
 %   \left(
 %     \sum_{i=1}^{4} \meta{X_i} \cdot 10^{-4i} \cdot 10^{-\meta{shift}}
-%     - \meta{X'_1} \cdot 10^{-8} + \meta{X'_2} \cdot 10^{-16}
 %   \right)
+%   - \bigl( \meta{X'_1} \cdot 10^{-8} + \meta{X'_2} \cdot 10^{-16} \bigr)
+%   = 0.\meta{extra-digits} \cdot 10^{-16}
 %   \in [0,10^{-16}).
 %   \]
 %   To round properly later, we need to remember some information
