Add \inteval to xfp

--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -69,7 +69,8 @@
 % \begin{documentation}
 %
 % This package provides a \LaTeXe{} document-level interface to the \LaTeX{}3
-% floating point unit (part of \pkg{expl3}).
+% floating point unit (part of \pkg{expl3}). It also provides a parallel
+% integer expression interface for convenience.
 % 
 % \begin{function}[EXP]{\fpeval}
 %   The expandable command \cs{fpeval} takes as it's argument a floating
@@ -132,6 +133,20 @@
 %   = \fpeval{sin 3.5 /2 + 2e-3} $.
 % \end{verbatim}
 %
+% \begin{function}[EXP]{\inteval}
+%   The expandable command \cs{inteval} takes as it's argument an integer
+%   expression and will produce a result using the normal rules of
+%   mathematics. The operations recognised are |+|, |-|, |*| and |/| plus
+%   parentheses. Division occurs with \emph{roudning}. As this command i
+%   expandable it can be used where \TeX{} requires a number and for example
+%   within a low-level \cs{edef} operation to give a purely numerical result.
+% \end{function}
+%
+% An example of use could be the following.
+% \begin{verbatim}
+%   \LaTeX{} can now compute: The sum of the numbers is $\inteval{1 + 2 + 3}$.
+% \end{verbatim}
+%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -151,6 +166,13 @@
 %   A document level wrapper around the code level function.
 %    \begin{macrocode}
 \NewExpandableDocumentCommand \fpeval { m } { \fp_eval:n {#1} }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\inteval}
+%   A second one, this time around an \eTeX{} primitive.
+%    \begin{macrocode}
+\NewExpandableDocumentCommand \inteval { m } { \int_eval:n {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
