Use l3docstrip's at-at (@@) replacement in l3bootstrap and l3names

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -227,7 +227,7 @@
 %
 %    \begin{macrocode}
 %<*initex|package>
-%<@@=expl>
+%<@@=kernel>
 %    \end{macrocode}
 %
 % \subsection{Format-specific code}
@@ -597,7 +597,7 @@
     \catcode 124 = \the\catcode 124\relax
     \catcode 126 = \the\catcode 126\relax
     \endlinechar = \the\endlinechar\relax
-    \chardef\csname\detokenize{l__kernel_expl_bool}\endcsname = 0\relax
+    \chardef\csname\detokenize{l_@@_expl_bool}\endcsname = 0\relax
   }%
 %</package>
 %    \end{macrocode}
@@ -617,10 +617,10 @@
 \endlinechar = 32\relax
 %    \end{macrocode}
 %
-% \begin{variable}{\l__kernel_expl_bool}
+% \begin{variable}{\l_@@_expl_bool}
 %   The status for experimental code syntax: this is on at present.
 %    \begin{macrocode}
-\chardef\l__kernel_expl_bool = 1\relax
+\chardef\l_@@_expl_bool = 1\relax
 %    \end{macrocode}
 %\end{variable}
 %
@@ -634,7 +634,7 @@
 %    \begin{macrocode}
 \protected \def \ExplSyntaxOn
   {
-    \bool_if:NF \l__kernel_expl_bool
+    \bool_if:NF \l_@@_expl_bool
       {
         \cs_set_protected:Npx \ExplSyntaxOff
           {
@@ -649,7 +649,7 @@
             \char_set_catcode:nn { 126 } { \char_value_catcode:n { 126 } }
             \tex_endlinechar:D =
               \tex_the:D \tex_endlinechar:D \scan_stop:
-            \bool_set_false:N \l__kernel_expl_bool
+            \bool_set_false:N \l_@@_expl_bool
             \cs_set_protected:Npn \ExplSyntaxOff { }
           }
       }
@@ -663,7 +663,7 @@
     \char_set_catcode_other:n            { 124 } % pipe
     \char_set_catcode_space:n            { 126 } % tilde
     \tex_endlinechar:D = 32 \scan_stop:
-    \bool_set_true:N \l__kernel_expl_bool
+    \bool_set_true:N \l_@@_expl_bool
   }
 %    \end{macrocode}
 % \end{macro}
