--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -146,6 +146,11 @@
 %   range ($0$ to $255$) is accepted due to engine limitations.
 % \end{function}
 %
+% \begin{variable}[added = 2011-09-05]{\c_catcode_other_space_tl}
+%   Token list containing one character with category code $12$,
+%   (\enquote{other}), and character code $32$ (space).
+% \end{variable}
+%
 % \section{Manipulating and interrogating character tokens}
 %
 % \begin{function}[updated = 2015-11-11]
@@ -1595,6 +1600,13 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\c_catcode_other_space_tl}
+%   Create a space with category code $12$: an \enquote{other} space.
+%    \begin{macrocode}
+\tl_const:Nx \c_catcode_other_space_tl { \char_generate:nn { `\  } { 12 } }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsection{Generic tokens}
