--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -937,6 +937,11 @@
 %
 % \section{Additions to \pkg{l3token}}
 %
+% \begin{variable}[added = 2017-08-07]{\c_catcode_active_space_tl}
+%   Token list containing one character with category code $13$,
+%   (\enquote{active}), and character code $32$ (space).
+% \end{variable}
+%
 % \begin{function}[TF, updated = 2012-12-20]{\peek_N_type:}
 %   \begin{syntax}
 %     \cs{peek_N_type:TF} \Arg{true code} \Arg{false code}
@@ -4061,6 +4066,21 @@
 % \end{macro}
 %
 % \subsection{Additions to \pkg{l3token}}
+%
+% \begin{variable}{\c_catcode_active_space_tl}
+%   While \cs{__char_generate:nn} can produce active characters in some
+%   engines it cannot in general.  It would be possible to simply change
+%   the catcode of space but then the code would need to avoid all
+%   spaces, making it quite unreadable.  Instead we use the primitive
+%   \cs{tex_lowercase:D} trick.
+%    \begin{macrocode}
+\group_begin:
+  \char_set_catcode_active:N *
+  \char_set_lccode:nn { `* } { `\ }
+  \tex_lowercase:D { \tl_const:Nn \c_catcode_active_space_tl { * } }
+\group_end:
+%    \end{macrocode}
+% \end{variable}
 %
 %    \begin{macrocode}
 %<@@=peek>
