\pdfsave, etc., may be emulation [ci skip]
Mainly trying to pull the docs back into line with the reality:
LuaTeX means the basic assumptions have to be adapted.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -989,7 +989,8 @@
 % \end{itemize}
 % Any engine which defines |\pdfoutput| (\emph{i.e.}~allows direct production
 % of a PDF file without a DVI intermediate) must also provide |\pdfcolorstack|,
-% |\pdfliteral|, |\pdfmatrix|, |\pdfrestore| and |\pdfsave|.
+% |\pdfliteral|, |\pdfmatrix|, |\pdfrestore| and |\pdfsave| or equivalent
+% functionality.
 %
 % Practically, these requirements are met by the engines
 % \begin{itemize}
