Slight efficiency improvement

--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -321,12 +321,12 @@
   {
     \cs_new_protected:Npn \exp_not:N \@@_read_bb_auxiii:w
       ##1 \c_colon_str ##2 \exp_not:N \q_stop
-  }
-  {
-    \str_if_eq_x:nnT
-      { \c_percent_str \c_percent_str BoundingBox }
-      {#1}
-      { \@@_read_bb_auxiv:w #2 ( ) \q_stop }
+      {
+        \exp_not:N \str_if_eq:nnT
+          { \c_percent_str \c_percent_str BoundingBox }
+          {##1}
+          { \exp_not:N \@@_read_bb_auxiv:w ##2 ( ) \exp_not:N \q_stop }
+      }
   }
 %    \end{macrocode}
 %   If the bounding box is |atend|, just ignore the current one and keep going.
