--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -309,13 +309,16 @@
               ##1 ~ \c_colon_str \exp_not:N \q_stop
           }
       }
-    \ior_close:N \exp_not:N \l_@@_tmp_ior
-    \dim_compare:nNnF \l__image_llx_dim = { 0pt }
-      { \dim_const:cn { c_@@_ #3#4 _llx_dim } { \l__image_llx_dim } }
-    \dim_if_zero:nNnF \l__image_lly_dim = { 0pt }
-      { \dim_const:cn { c_@@_ #3#4 _lly_dim } { \l__image_lly_dim } }
-    \dim_const:cn { c_@@_ #3#4 _urx_dim } { \l__image_urx_dim }
-    \dim_const:cn { c_@@_ #3#4 _ury_dim } { \l__image_ury_dim }
+    \exp_not:n
+      {
+        \ior_close:N \exp_not:N \l_@@_tmp_ior
+        \dim_compare:nNnF \l__image_llx_dim = { 0pt }
+          { \dim_const:cn { c_@@_ #3#4 _llx_dim } { \l__image_llx_dim } }
+        \dim_if_zero:nNnF \l__image_lly_dim = { 0pt }
+          { \dim_const:cn { c_@@_ #3#4 _lly_dim } { \l__image_lly_dim } }
+        \dim_const:cn { c_@@_ #3#4 _urx_dim } { \l__image_urx_dim }
+        \dim_const:cn { c_@@_ #3#4 _ury_dim } { \l__image_ury_dim }
+      }
   }
 \use:x
   {
