Drop boxes on use where applicable
This is only for internal boxes where we can be sure they are
'done with'.

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -1352,7 +1352,7 @@
     \mode_leave_vertical:
     \@@_align:NnnNnnnnN \c_empty_coffin { H } { l }
       #1 {#2} {#3} {#4} {#5} \l_@@_aligned_coffin
-    \box_use:N \l_@@_aligned_coffin
+    \box_use_drop:N \l_@@_aligned_coffin
   }
 \cs_generate_variant:Nn \coffin_typeset:Nnnnn { c }
 %    \end{macrocode}
@@ -1565,7 +1565,7 @@
         \prop_remove:Nn \l_@@_display_poles_prop {##1}
         \@@_display_handles_aux:nnnnnn {##1} ##2 {#2}
       }
-    \box_use:N \l_@@_display_coffin
+    \box_use_drop:N \l_@@_display_coffin
   }
 %    \end{macrocode}
 %   For each pole there is a check for an intersection, which here does
