More doc updates [ci skip]

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -70,7 +70,7 @@
 % as a list of \enquote{items},
 % or a list of \enquote{tokens}. An item is whatever \cs{use:n} would
 % grab as its argument: a single non-space token or a brace group,
-% with optional leading explicit space characters (each item is thus
+% with optional leading space characters (each item is thus
 % itself a token list). A token is either a normal \texttt{N} argument,
 % or \verb*| |, |{|, or |}| (assuming normal \TeX{} category codes).
 % Thus for example
@@ -360,8 +360,8 @@
 %   \end{syntax}
 %   Tests if the \meta{token list} consists only of blank spaces
 %   (\emph{i.e.}~contains no item). The test is \texttt{true} if
-%   \meta{token list} is zero or more explicit space characters
-%   (explicit tokens with character code~$32$ and category code~$10$),
+%   \meta{token list} is zero or more space characters
+%   (explicit character tokens with category code~$10$),
 %   and is \texttt{false} otherwise.
 % \end{function}
 %
@@ -751,8 +751,8 @@
 %   \begin{syntax}
 %     \cs{tl_trim_spaces:n} \Arg{token list}
 %   \end{syntax}
-%   Removes any leading and trailing explicit space characters
-%   (explicit tokens with character code~$32$ and category code~$10$)
+%   Removes any leading and trailing  space characters
+%   (explicit character tokens with category code~$10$)
 %   from the \meta{token list} and leaves the result in the input
 %   stream.
 %   \begin{texnote}
@@ -770,8 +770,8 @@
 %   \begin{syntax}
 %     \cs{tl_trim_spaces:N} \meta{tl~var}
 %   \end{syntax}
-%   Removes any leading and trailing explicit space characters
-%   (explicit tokens with character code~$32$ and category code~$10$)
+%   Removes any leading and trailing space characters
+%   (explicit character tokens with category code~$10$)
 %   from the content of the \meta{tl~var}. Note that this therefore
 %   \emph{resets} the content of the variable.
 % \end{function}
@@ -849,8 +849,8 @@
 %   \end{syntax}
 %   Leaves in the input stream the first \meta{item} in the
 %   \meta{token list}, discarding the rest of the \meta{token list}.
-%   All leading explicit space characters
-%   (explicit tokens with character code~$32$ and category code~$10$)
+%   All leading space characters
+%   (explicit character tokens with category code~$10$)
 %   are discarded.
 %   A blank \meta{token list} (which consists only of space characters)
 %   results in a low-level \TeX{} error, which may be avoided by the
@@ -867,8 +867,8 @@
 %   \begin{syntax}
 %     \cs{tl_tail:n} \Arg{token list}
 %   \end{syntax}
-%   Discards all leading explicit space characters
-%   (tokens with category code~$10$)
+%   Discards all leading space characters
+%   (explicit character tokens with category code~$10$)
 %   and the first \meta{item} in the \meta{token list}, and leaves the
 %   remaining tokens in the input stream.  Thus for example
 %   \begin{verbatim}
