Corrected a couple typos in the introduction to the l3tl documentation.

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -59,9 +59,9 @@
 % \begin{verbatim}
 %   \foo:N \l_some_tl
 % \end{verbatim}
-% In both cases, functions are available to test an manipulate the lists
+% In both cases, functions are available to test and manipulate the lists
 % of tokens, and these have the module prefix \texttt{tl}.
-% In many cases, function which can be applied to token list variables
+% In many cases, functions which can be applied to token list variables
 % are paired with similar functions for application to explicit lists
 % of tokens: the two \enquote{views} of a token list are therefore collected
 % together here.
