--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -78,34 +78,35 @@
 %
 % \subsection{Internal functions}
 %
-% \begin{variable}[added = 2017-06-15, updated = 2017-09-23]
-%   {\l__color_current_tl}
+% \begin{variable}[added = 2017-09-26]
+%   {\l__color_current_model_tl, \l__color_current_setting_tl}
 %   The color currently active for foreground (text, \emph{etc.}) material.
-%   This is stored in the form of a color model followed by one or more
-%   values. There are four pre-defined models, three of which take numerical
-%   values in the range $[0,1]$:
-%   \begin{itemize}
-%     \item \texttt{gray \meta{gray}} Grayscale color with the \meta{gray}
-%       value running from $0$ (fully black) to $1$ (fully white)
-%     \item \texttt{cmyk \meta{cyan} \meta{magenta} \meta{yellow} \meta{black}}
-%     \item \texttt{rgb \meta{red} \meta{green} \meta{blue}}
-%   \end{itemize}
-%   Notice that the value are separated by spaces. There is a fourth pre-defined
-%   model using a string value and a numerical one:
-%   \begin{itemize}
-%     \item \texttt{named \meta{name} \meta{tint}}
-%   \end{itemize}
-%   where the \meta{name} should be a pre-defined string color name and the
-%   \meta{tint} should be in the range $[0,1]$.
+%   This information is stored in two parts: the model in use and
+%   \meta{setting}: the latter is a \emph{space} separated list of one or more
+%   values, with the required number depending on the model in use.
 %
-%   Additional color models may be defined based on mixing of named colors:
-%   these will generally follow the pattern of the standard \texttt{cmyk}
-%   model but with each value representing the contribution of a named (spot)
-%   color.
+%   There are four pre-defined color models which have meaning and data
+%   requirements as follows:
+%   \begin{itemize}
+%     \item \texttt{gray} Grayscale color requiring a single \meta{settings}
+%       value in the range~$[0,1]$ ($0$ is fully black, $1$ is fully white)
+%     \item \texttt{cmyk} CMYK color requiring four entries in the
+%       \meta{settings}, one for each of cyan, magenta, yellow and black,
+%       each in the range~$[0,1]$
+%     \item \texttt{rgb} RGB color requiring three entries in the
+%       \meta{settings}, one for each of red, green and blue, each in the
+%       range~$[0,1]$
+%     \item \texttt{named} A pre-defined named (spot) color, with one two
+%       entries in the setting, the name itself and the loading (tint);
+%       the latter should be in the range~$[0,1]$
+%   \end{itemize}
+%
+%   Additional models may be created to allow mixing of named colors. The
+%   number of \meta{settings} these require will depend on the number of
+%   colors to be mixed.
 %   \begin{texnote}
-%     This format is based on that for \texttt{dvips} color specials, extended
-%     to cover additional types. Each driver should provide appropriate
-%     conversion to their native format at the point of output.
+%     The content of \cs{l__color_current_setting_tl} is space-separated as
+%     this allows it to be used directly in specials in many common cases.
 %   \end{texnote}
 % \end{variable}
 %
@@ -145,12 +146,17 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\l__color_current_tl}
-%   The current color: the format here is taken from \texttt{dvips} but it
-%   is easy enough to convert to \texttt{pdfmode} as required.
+% \begin{variable}{\l__color_current_model_tl, \l__color_current_setting_tl}
+%   The current color in two distinct parts. As the setting data is used only
+%   for specials, and those are always space-separated, it makes most sense to
+%   hold the internal information in that form. Any splitting is done by a
+%   delimited function but often the entire \texttt{tl} can be used as-is:
+%   see \texttt{l3drivers.dtx}.
 %    \begin{macrocode}
-\tl_new:N \l__color_current_tl
-\tl_set:Nn \l__color_current_tl { gray~0 }
+\tl_new:N \l__color_current_model_tl
+\tl_set:Nn \l__color_current_model_tl { gray }
+\tl_new:N \l__color_current_setting_tl
+\tl_set:Nn \l__color_current_setting_tl { 0 }
 %    \end{macrocode}
 % \end{variable}
 %
