--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -511,7 +511,9 @@
 %    \end{macrocode}
 %
 % \begin{macro}[aux]{\@@_color_pickup:}
-%   Allow for \LaTeXe{}.
+%   Allow for \LaTeXe{} color. Here, the possible input values are limited:
+%   \texttt{dvips}-style colors can mainly be taken as-is with the exception
+%   of named ones (here we need a model and a tint).
 %    \begin{macrocode}
 %<*package>
 \AtBeginDocument
@@ -519,7 +521,20 @@
     \@ifpackageloaded { color }
       {
         \cs_new_protected:Npn \@@_color_pickup:
-          { \tl_set:Nx \l__color_current_tl { \current@color } }
+          {
+            \exp_args:NV \tl_if_head_is_space:nTF \current@color
+              {
+                \tl_set:Nn \l__color_current_model_tl { named }
+                \tl_set:Nx \l__color_current_setting_tl
+                   { \exp_args:wN \use:n \current@color \c_space_tl 1 }
+              }
+              { \exp_args:wN \@@_color_pickup_aux:w \current@color \q_stop }
+          }
+        \cs_new_protected:Npn \@@_color_pickup_aux:w #1 ~ #2 \q_stop
+          {
+            \tl_set:Nn \l__color_current_model_tl {#1}
+            \tl_set:Nn \l__color_current_setting_tl {#2}
+        }
       }
       { \cs_new_protected:Npn \@@_color_pickup: { } }
   }
@@ -528,19 +543,48 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_color_ensure_current:}
+% \begin{macro}[aux, EXP]
+%   {
+%     \@@_color_convert_gray: ,
+%     \@@_color_convert_cmyk: ,
+%     \@@_color_convert_rgb:  ,
+%     \@@_color_convert_named:
+%   }
 % \begin{macro}[aux]{\@@_color_reset:}
-%   Directly set the color using the specials: no optimisation here.
+%   Convert the color data to the appropriate form: \texttt{named} colors can't
+%   have a tint level here! The easy route of just picking up \texttt{named}
+%   won't work as there could be additional models created for mixing named
+%   colors. (They would not be supported at the moment, but still need to be
+%   handled.)
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_color_ensure_current:
   {
 %<*package>
     \@@_color_pickup:
 %</package>
-    \tex_special:D { color~push~\l__color_current_tl }
+    \tex_special:D
+      {
+        color~push~
+        \use:c { @@_color_convert_ \l__color_current_model_tl : }
+      }
   }
+\cs_new:Npn \@@_color_convert_gray:
+  { gray ~ \l__color_current_setting_tl }
+\cs_new:Npn \@@_color_convert_cmyk:
+  { cmyk ~ \l__color_current_setting_tl }
+\cs_new:Npn \@@_color_convert_rgb:
+  { rgb ~ \l__color_current_setting_tl }
+\cs_new:Npn \@@_color_convert_named:
+  {
+    \exp_after:wN \@@_color_convert_named:w
+      \l__color_current_setting_tl
+  }
+\cs_new:Npn \@@_color_convert_named:w #1 ~ #2
+  { \c_space_tl #1 }
 \cs_new_protected:Npn \@@_color_reset:
   { \tex_special:D { color~pop } }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -573,23 +617,43 @@
             \exp_last_unbraced:Nx \@@_color_pickup_aux:w
               { \current@color } ~ 0 ~ 0 ~ 0 \q_stop
           }
-        \cs_new:Npn \@@_color_pickup_aux:w #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 \q_stop
+        \cs_new_protected:Npn \@@_color_pickup_aux:w
+          #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 \q_stop
           {
-            \tl_set:Nx \l__color_current_tl
+            \str_if_eq:nnTF {#2} { g }
               {
-                \str_if_eq:nnTF {#2} { g }
-                  { gray ~ #1 }
+                \tl_set:Nn \l__color_current_model_tl { gray }
+                \tl_set:Nn \l__color_current_setting_tl { #1 }
+              }
+              {
+                \str_if_eq:nnTF {#4} { rg }
                   {
-                    \str_if_eq:nnTF {#4} { rg }
-                      { rgb ~ #1 ~ #2 ~ #3 }
-                      {
-                        \str_if_eq:nnTF {#5} { k }
-                          { cmyk ~ #1 ~ #2 ~ #3 ~ #4 }
-                          { gray ~ #1 }
-                      }
+                    \tl_set:Nn \l__color_current_model_tl { rgb }
+                    \tl_set:Nn \l__color_current_setting_tl
+                      { #1 ~ #2 ~ #3 }
+                  }
+                  {
+                     \str_if_eq:nnTF {#5} { k }
+                       {
+                        \tl_set:Nn \l__color_current_model_tl { cmyk }
+                        \tl_set:Nn \l__color_current_setting_tl
+                          { #1 ~ #2 ~ #3 ~ #4 }
+                       }
+                       {
+                         \str_if_eq:nnTF {#2} { cs }
+                           {
+                             \tl_set:Nn \l__color_current_model_tl { named }
+                             \tl_set:Nx \l__color_current_setting_tl
+                               { \use_none:n #1 ~ #5 }
+                           }
+                           {
+                             \tl_set:Nn \l__color_current_model_tl { gray }
+                             \clist_set:Nn \l__color_current_setting_tl { 0 }
+                           }
+                       }
                   }
               }
-          }
+        }
       }
       { \cs_new_protected:Npn \@@_color_pickup: { } }
   }
@@ -609,14 +673,17 @@
 % \begin{macro}[int]{\@@_color_ensure_current:}
 % \begin{macro}[aux, EXP]
 %   {
-%     \@@_color_convert:w, \@@_color_convert_gray:w,
-%     \@@_color_convert_cmyk:w, \@@_color_convert_rgb:w
+%     \@@_color_convert_gray: ,
+%     \@@_color_convert_cmyk: ,
+%     \@@_color_convert_rgb:  ,
+%     \@@_color_convert_named:
 %   }
+% \begin{macro}[aux, EXP]{\@@_color_convert_named:w}
 % \begin{macro}[aux]{\@@_color_reset:}
 %   There is a dedicated primitive/primitive interface for setting colors.
 %   As with scoping, this approach is not suitable for cached operations.
-%   Since we are using the \texttt{dvips} format to store color, there is a
-%   bit of work to correctly place it in the output.
+%   Most of the conversions are trivial but the need to cover named colors
+%   makes life slightly more interesting.
 %    \begin{macrocode}
 \cs_new_protected:Npx \@@_color_ensure_current:
   {
@@ -628,21 +695,34 @@
       { \pdftex_pdfcolorstack:D }
         \exp_not:N \l_@@_color_stack_int push
           {
-            \exp_not:N \exp_after:wN
-            \exp_not:N \@@_color_convert:w
-            \exp_not:N \l__color_current_tl
-            \c_space_tl 0 ~ 0 ~ 0
-            \exp_not:N \q_stop
+            \exp_not:N \use:c
+              { @@_color_convert_ \exp_not:N \l__color_current_model_tl : }
           }
   }
-\cs_new:Npn \@@_color_convert:w #1 ~
-  { \use:c { @@_color_convert_ #1 :w } }
-\cs_new:Npn \@@_color_convert_gray:w #1 ~ #2 \q_stop
-  { #1 ~ g ~ #1 ~ G }
-\cs_new:Npn \@@_color_convert_cmyk:w #1 ~ #2 ~ #3 ~ #4 ~#5 \q_stop
-  { #1 ~ #2 ~ #3 ~ #4 ~ k ~ #1 ~ #2 ~ #3 ~ #4 ~ K }
-\cs_new:Npn \@@_color_convert_rgb:w #1 ~ #2 ~ #3 ~ #4 \q_stop
-  { #1 ~ #2 ~ #3 ~ rg ~ #1 ~ #2 ~ #3 ~ RG }
+\cs_new:Npn \@@_color_convert_gray:
+  {
+    \l__color_current_setting_tl \c_space_tl g ~
+    \l__color_current_setting_tl \c_space_tl G
+  }
+\cs_new:Npn \@@_color_convert_cmyk:
+  {
+    \l__color_current_setting_tl \c_space_tl k ~
+    \l__color_current_setting_tl \c_space_tl K
+  }
+\cs_new:Npn \@@_color_convert_rgb:
+  {
+    \l__color_current_setting_tl \c_space_tl rg ~
+    \l__color_current_setting_tl \c_space_tl RG
+  }
+\cs_new:Npn \@@_color_convert_named:
+  {
+    \exp_after:wN \@@_color_convert_named:w
+      \l__color_current_setting_tl
+  }
+\cs_new:Npn \@@_color_convert_named:w #1 ~ #2
+  {
+    /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ sc ~ #2 ~ SC
+  }
 \cs_new_protected:Npx \@@_color_reset:
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
@@ -651,6 +731,7 @@
         \exp_not:N \l_@@_color_stack_int pop \scan_stop:
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
