[l3quarks.dtx / 3. Quark tests] Typo: later -> latter.

--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -134,7 +134,7 @@
 % \section{Quark tests}
 %
 % The method used to define quarks means that the single token (\texttt{N})
-% tests are faster than the multi-token (\texttt{n}) tests. The later
+% tests are faster than the multi-token (\texttt{n}) tests. The latter
 % should therefore only be used when the argument can definitely take
 % more than a single token.
 %
