--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -536,8 +536,8 @@
 %   Applies the \meta{function} to every \meta{item} stored
 %   within the \meta{tl~var}. The \meta{function} should consist of code
 %   which receives the \meta{item} stored in the \meta{variable}.
-%   One variable mapping can be nested inside another. See also
-%   \cs{tl_map_inline:Nn}.
+%   The assignments to \meta{tl~var.} are local, and one variable mapping
+%   can be nested inside another. See also \cs{tl_map_inline:Nn}.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29]{\tl_map_variable:nNn}
@@ -547,8 +547,8 @@
 %   Applies the \meta{function} to every \meta{item} stored
 %   within the \meta{token list}. The \meta{function} should consist of code
 %   which receives the \meta{item} stored in the \meta{variable}.
-%   One variable mapping can be nested inside another. See also
-%   \cs{tl_map_inline:nn}.
+%   The assignments to \meta{tl~var.} are local, and one variable mapping
+%   can be nested inside another. See also \cs{tl_map_inline:nn}.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29, rEXP]{\tl_map_break:}
