Fix markup for Lua functions (fixes #406) [ci skip]

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -130,7 +130,7 @@
 %
 % \begin{function}{l3kernel.charcat}
 %   \begin{syntax}
-%     \cs{l3kernel.charcat}|(|\meta{charcode}, \meta{catcode}|)|
+%     |l3kernel.charcat||(|\meta{charcode}, \meta{catcode}|)|
 %   \end{syntax}
 %   Constructs a character of \meta{charcode} and \meta{catcode} and returns
 %   the result to \TeX{}.
@@ -138,7 +138,7 @@
 %
 % \begin{function}{l3kernel.filemdfivesum}
 %   \begin{syntax}
-%     \cs{l3kernel.filemdfivesum}|(|\meta{file}|)|
+%     |l3kernel.filemdfivesum||(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the of the MD5 sum of the file contents read as bytes; note that
 %   the result will depend on the nature of the line endings used in the file,
@@ -148,7 +148,7 @@
 %
 % \begin{function}{l3kernel.filemoddate}
 %   \begin{syntax}
-%     \cs{l3kernel.filemoddate}|(|\meta{file}|)|
+%     |l3kernel.filemoddate||(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the of the date/time of last modification of the \meta{file} in the
 %   format |D:|\meta{year}\meta{month}\meta{day}\meta{hour}\meta{minute}^^A
@@ -159,7 +159,7 @@
 %
 % \begin{function}{l3kernel.filesize}
 %   \begin{syntax}
-%     \cs{l3kernel.filesize}|(|\meta{file}|)|
+%     |l3kernel.filesize||(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the size of the \meta{file} in bytes. If the \meta{file} is not
 %   found, nothing is returned with \emph{no error raised}.
@@ -167,7 +167,7 @@
 %
 % \begin{function}{l3kernel.strcmp}
 %   \begin{syntax}
-%     \cs{l3kernel.strcmp}|(|\meta{str one}, \meta{str two}|)|
+%     |l3kernel.strcmp||(|\meta{str one}, \meta{str two}|)|
 %   \end{syntax}
 %   Compares the two strings and returns |0| to \TeX{}
 %   if the two are identical.
