--- a/l3trial/l3color-extra/l3color-extra.dtx
+++ b/l3trial/l3color-extra/l3color-extra.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3color-addn.dtx Copyright(C) 2017 The LaTeX3 Project
+%% File: l3color-extra.dtx Copyright(C) 2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -29,7 +29,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3color-addn} package\\ Experimental additions to color support^^A
+%   The \textsf{l3color-extra} package\\ Experimental additions to color support^^A
 % }
 %
 % \author{^^A
@@ -87,7 +87,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3color-addn} Implementation}
+% \section{\pkg{l3color-extra} Implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
