--- a/l3trial/l3color-extra/l3color-extra.dtx
+++ b/l3trial/l3color-extra/l3color-extra.dtx
@@ -553,7 +553,7 @@
     \@@_parse:nN {#2} \l_@@_named_tl
     \@@_store:Nn \l_@@_named_tl {#1}
   }
-\cs_new_protected:Npn \color_set:nnn #1
+\cs_new_protected:Npn \color_set:nnn #1#2#3
   {
     \@@_direct:nnN {#2} {#3} \l_@@_named_tl
     \@@_store:Nn \l_@@_named_tl {#1}
