Correct form of colour input for base colours

--- a/l3trial/l3color-extra/l3color-extra.dtx
+++ b/l3trial/l3color-extra/l3color-extra.dtx
@@ -582,12 +582,12 @@
 % \begin{macrocode}
 \color_set:nnn { black } { gray } { 0 }
 \color_set:nnn { white } { gray } { 0 }
-\color_set:nnn { cyan }    { cmyk } { 1~0~0~0 }
-\color_set:nnn { magenta } { cmyk } { 0~1~0~0 }
-\color_set:nnn { yellow }  { cmyk } { 0~0~1~0 }
-\color_set:nnn { red }   { rgb } { 1~0~0 }
-\color_set:nnn { grenn } { rgb } { 0~1~0 }
-\color_set:nnn { blue }  { rgb } { 0~0~1 }
+\color_set:nnn { cyan }    { cmyk } { 1 , 0 , 0 , 0 }
+\color_set:nnn { magenta } { cmyk } { 0 , 1 , 0 , 0 }
+\color_set:nnn { yellow }  { cmyk } { 0 , 0 , 1 , 0 }
+\color_set:nnn { red }   { rgb } { 1 , 0 , 0 }
+\color_set:nnn { grenn } { rgb } { 0 , 1 , 0 }
+\color_set:nnn { blue }  { rgb } { 0 , 0 , 1 }
 % \end{macrocode}
 %
 % \begin{macrocode}
