--- a/l3trial/l3color-extra/l3color-extra.dtx
+++ b/l3trial/l3color-extra/l3color-extra.dtx
@@ -193,7 +193,7 @@
 %     \@@_convert_rgb_gray:w
 %     \@@_convert_rgb_cmyk:w
 %   }
-%  \begin{macro}[aux, EXP]{\@@_convert_rgb_cmyk:nnnnn}
+%  \begin{macro}[aux, EXP]{\@@_convert_rgb_cmyk:nnnn}
 %    Model conversion is carried out using standard formulae, as described in
 %    the manual for \pkg{xcolor} (see also the \emph{PostScript Language
 %    Reference Manual}).
@@ -229,10 +229,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_convert_rgb_cmyk:w #1 ~ #2 ~ #3 ~ #4 \q_stop
   {
-    \exp_args:Nf \@@_convert_rgb_cmyk:nnnnn
-      { \fp_eval:n { min ( 1 - #1 , 1 - #2 , 1 - #3 ) } {#1} {#2} {#3} }
+    \exp_args:Nf \@@_convert_rgb_cmyk:nnnn
+      { \fp_eval:n { min ( 1 - #1 , 1 - #2 , 1 - #3 ) } } {#1} {#2} {#3}
   }
-\cs_new:Npn \@@_convert_rgb_cmyk:nnnnn #1#2#3#4
+\cs_new:Npn \@@_convert_rgb_cmyk:nnnn #1#2#3#4
   {
     \fp_eval:n { min ( 1 , max ( 0 , 1 - #2 - #1 ) ) } \c_space_tl
     \fp_eval:n { min ( 1 , max ( 0 , 1 - #3 - #1 ) ) } \c_space_tl
