First steps to supporting "." syntax in colour expressions

--- a/l3trial/l3color-extra/l3color-extra.dtx
+++ b/l3trial/l3color-extra/l3color-extra.dtx
@@ -488,6 +488,19 @@
 %
 % \subsection{Selecting colors}
 %
+% \begin{macro}[int]{\@@_select:}
+%   A driver-neutral location for \enquote{last minute} manipulations before
+%   handing off to the driver code.  We set the special |.| syntax here: this
+%   will therefore always be available.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_select:
+  {
+    \tl_set_eq:cN { l_@@_named_ . _tl } \l__color_current_tl
+%    \__driver_color_select:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\color_select:n}
 % \begin{macro}{\color_select:nn}
 %   Parse the input expressions then get the driver to actually activate
@@ -495,13 +508,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_select:n #1
   {
-    \@@_parse:nN {#1} \l_@@_current_tl
-    \__driver_color_select: 
+    \@@_parse:nN {#1} \l__color_current_tl
+    \@@_select:
   }
 \cs_new_protected:Npn \color_select:nn #1#2
   {
-    \@@_direct:nnN {#1} {#2} \l_@@_current_tl
-    \__driver_color_select:
+    \@@_direct:nnN {#1} {#2} \l__color_current_tl
+    \@@_select:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -597,6 +610,14 @@
 \color_set:nnn { green } { rgb } { 0 , 1 , 0 }
 \color_set:nnn { blue }  { rgb } { 0 , 0 , 1 }
 % \end{macrocode}
+%
+% \begin{variable}{\l_@@_named_._tl}
+%   A special named color: this is always defined though not fixed in
+%   definition.
+%    \begin{macrocode}
+\tl_new:c { l_@@_named_._tl }
+%    \end{macrocode}
+% \end{variable}
 %
 % \subsection{Diagnostics}
 %
