--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -543,6 +543,7 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_color_ensure_current:}
+% \begin{macro}[int]{\@@_color_select:}
 % \begin{macro}[aux, EXP]{\@@_convert_model:w}
 % \begin{macro}[aux, EXP]{\@@_color_convert_spot:}
 % \begin{macro}[aux, EXP]{\@@_color_convert_spot:w}
@@ -558,6 +559,10 @@
 %<*package>
     \@@_color_pickup:
 %</package>
+    \@@_color_select:
+  }
+\cs_new_protected:Npn \@@_color_select:
+  {
     \tex_special:D
       {
         color~push~
@@ -574,6 +579,7 @@
 \cs_new_protected:Npn \@@_color_reset:
   { \tex_special:D { color~pop } }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -654,6 +660,7 @@
 % \end{variable}
 %
 % \begin{macro}[int]{\@@_color_ensure_current:}
+% \begin{macro}[int]{\@@_color_select:}
 % \begin{macro}[aux, EXP]{\@@_color_convert:w}
 % \begin{macro}[aux, EXP]
 %   {
@@ -668,11 +675,15 @@
 %   Most of the conversions are trivial but the need to cover spot colors
 %   makes life slightly more interesting.
 %    \begin{macrocode}
-\cs_new_protected:Npx \@@_color_ensure_current:
+\cs_new_protected:Npn \@@_color_ensure_current:
   {
 %<*package>
-    \exp_not:N \@@_color_pickup:
+    \@@_color_pickup:
 %</package>
+    \@@_color_select:
+  }
+\cs_new_protected:Npx \@@_color_select:
+  {
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D colorstack }
       { \pdftex_pdfcolorstack:D }
@@ -704,6 +715,7 @@
         \exp_not:N \l_@@_color_stack_int pop \scan_stop:
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
