--- a/l3trial/l3color-extra/l3color-extra.dtx
+++ b/l3trial/l3color-extra/l3color-extra.dtx
@@ -496,7 +496,7 @@
 \cs_new_protected:Npn \@@_select:
   {
     \tl_set_eq:cN { l_@@_named_ . _tl } \l__color_current_tl
-%    \__driver_color_select:
+    \__driver_color_select:
   }
 %    \end{macrocode}
 % \end{macro}
