s/color-extra/color-extras/
Lines up with Bruno's approach.

--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3color-extra.dtx Copyright(C) 2017 The LaTeX3 Project
+%% File: l3color-extras.dtx Copyright(C) 2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -32,7 +32,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3color-extra} package\\ Experimental additions to color support^^A
+%   The \textsf{l3color-extras} package\\ Experimental additions to color support^^A
 % }
 %
 % \author{^^A
@@ -96,7 +96,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3color-extra} Implementation}
+% \section{\pkg{l3color-extras} Implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
@@ -108,7 +108,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3color-extra}{2017/10/10}{}
+\ProvidesExplPackage{l3color-extras}{2017/10/10}{}
   {L3 Experimental additions to color support}
 %</package>
 %    \end{macrocode}
