Delete repeated "both" [ci skip]

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -436,7 +436,7 @@
 %
 % \subsubsection{Variables: guidance}
 %
-% Both comma lists and sequences both have similar characteristics.
+% Both comma lists and sequences have similar characteristics.
 % They both use special delimiters to mark out one entry from the
 % next, and are both accessible at both ends. In general, it is
 % easier to create comma lists `by hand' as they can be typed
